// Database: bank

Table "User" {
  "id" INT [pk, increment]
  "pseudo" VARCHAR(255) [not null]
  "email" VARCHAR(255) [unique, not null]
  "password" VARCHAR(255) [not null]
  "balance" DOUBLE [default: 0.0]
}

Table "Friends" {
  "userId" INT
  "friendId" INT

  Indexes {
    (userId, friendId) [pk]
  }
}

Table "Wallet" {
  "id" INT [pk, increment]
  "accountNumber" VARCHAR(255) [unique, not null]
  "balance" DOUBLE [not null, default: 0.0]
  "userId" INT
}

Table "Transaction" {
  "id" INT [pk, increment]
  "senderAccountNumber" VARCHAR(255) [not null]
  "receiverAccountNumber" VARCHAR(255) [not null]
  "description" TEXT
  "amount" DOUBLE [not null]
  "transactionFee" DOUBLE [not null, default: 0.0]
  "timestamp" DATETIME [default: `CURRENT_TIMESTAMP`]
  "walletId" INT
}

Ref:"User"."id" < "Friends"."userId" [delete: cascade]

Ref:"User"."id" < "Friends"."friendId" [delete: cascade]

Ref:"User"."id" < "Wallet"."userId"

Ref:"Wallet"."id" < "Transaction"."walletId"